--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ var sentences=
    [
 
 [1,128]
-], 'Thumbelina 5-1: A Very Special Gift'
+], 'Thumbelina 5-1: Up and Away'
  ],
 
 ['thumbelina5-2.mp4', 
    [
 [0,213]
-], 'Thumbelina 5-2: Thumbelina\'s New Home'
+], 'Thumbelina 5-2: Up and Away'
  ],
  
  
