--- a/index.html
+++ b/index.html
@@ -49,7 +49,21 @@ var sentences=
 [0,213]
 ], 'Thumbelina 5-2: Up and Away'
  ],
- 
+
+ ['thumbelina6.mp4', 
+   [
+
+[6,290]
+], 'Thumbelina 6: All Alone'
+ ],
+
+['thumbelina7.mp4', 
+   [
+
+[8,324]
+], 'Thumbelina 7: Finding New Friends'
+ ],
+
  
  ['cinderella1.mp4', 
    [
