--- a/index.html
+++ b/index.html
@@ -64,6 +64,27 @@ var sentences=
 ], 'Thumbelina 7: Finding New Friends'
  ],
 
+ ['thumbelina8.mp4', 
+   [
+
+[6,294]
+], 'Thumbelina 8: Meeting Mrs Gray'
+ ],
+
+['thumbelina9.mp4', 
+   [
+
+[7,315]
+], 'Thumbelina 9: Mrs Gray\'s Plans'
+ ],
+
+['thumbelina10.mp4', 
+   [
+
+[6,284]
+], 'Thumbelina 10: Getting Ready for a Wedding'
+ ],
+ 
  
  ['cinderella1.mp4', 
    [
