--- a/index.html
+++ b/index.html
@@ -84,7 +84,28 @@ var sentences=
 [6,284]
 ], 'Thumbelina 10: Getting Ready for a Wedding'
  ],
- 
+
+ ['thumbelina11.mp4', 
+   [
+
+[1,251]
+], 'Thumbelina 111: Seeing an Old Friend'
+ ],
+
+['thumbelina12.mp4', 
+   [
+
+[1,265]
+], 'Thumbelina 12: A Heart still Beats'
+ ],
+
+['thumbelina13.mp4', 
+   [
+
+[1,242]
+], 'Thumbelina 13: Pete\'s Story'
+ ],
+
  
  ['cinderella1.mp4', 
    [
