--- a/index.html
+++ b/index.html
@@ -106,6 +106,27 @@ var sentences=
 ], 'Thumbelina 13: Pete\'s Story'
  ],
 
+['thumbelina14.mp4', 
+   [
+
+[1,280]
+], 'Thumbelina 14: The Great Escape'
+ ],
+
+['thumbelina15.mp4', 
+   [
+
+[1,267]
+], 'Thumbelina 15: Coming Home'
+ ],
+
+['thumbelina16.mp4', 
+   [
+
+[1,270]
+], 'Thumbelina 16: Seeing the World'
+ ],
+
  
  ['cinderella1.mp4', 
    [
