--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 var sentences= 
 [
 
+ ['mermaid2.mp3', 
+   [
+[1,739]
+], 'The Little Mermaid Series: Episode 2 - Baby Shark'
+ ],
  
 ['thumbelina1.mp4', 
    [
