--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@ var sentences=
 [1,739]
 ], 'The Little Mermaid Series: Episode 2 - Baby Shark'
  ],
- 
+
+ ['mermaid3.mp3', 
+   [
+[2,738]
+], 'The Little Mermaid Series: Episode 3 - Deep Blue Sea'
+ ],
+
+
 ['thumbelina1.mp4', 
    [
 
