--- a/index.html
+++ b/index.html
@@ -18,6 +18,53 @@ var sentences=
  ],
 
 
+['mermaid4.mp3', 
+   [
+[5,733]
+], 'The Little Mermaid Series: Episode 4 - Saving the King'
+ ],
+
+
+['mermaid5.mp3', 
+   [
+[5,739]
+], 'The Little Mermaid Series: Episode 5 - Disappearing Fish'
+ ],
+
+
+
+
+['mermaid6.mp3', 
+   [
+[5,654]
+], 'The Little Mermaid Series: Episode 6 - The secret of Little Mermaid'
+ ],
+
+
+['mermaid7.mp3', 
+   [
+[5,699]
+], 'The Little Mermaid Series: Episode 7 - The Heart of the Ocean'
+ ],
+
+['mermaid8.mp3', 
+   [
+[5,625]
+], 'The Little Mermaid Series: Episode 8 - The Sea Witch Vega'
+ ],
+
+['mermaid9.mp3', 
+   [
+[5,552]
+], 'The Little Mermaid Series: Episode 9 - Great Fire'
+ ],
+
+['mermaid10.mp3', 
+   [
+[5,548]
+], 'The Little Mermaid Series: Episode 10 - Iceberg Megic'
+ ],
+
 ['thumbelina1.mp4', 
    [
 
