--- a/index.html
+++ b/index.html
@@ -5,6 +5,61 @@
 var sentences= 
 [
 
+['aliserapunzel2.mp4', 
+   [
+ [5,519]
+], 'Alisebaba Rapunzel: Episode 2 - the Friend of Long Hairs'
+ ],
+
+['aliserapunzel3.mp4', 
+   [
+[5,550]
+], 'Alisebaba Rapunzel: Episode 3 - Baby Dragon'
+ ],
+
+['aliserapunzel4.mp4', 
+   [
+[5,558]
+], 'Alisebaba Rapunzel: Episode 4 - Princess Squad'
+ ],
+
+['aliserapunzel5.mp4', 
+   [
+[5,568]
+], 'Alisebaba Rapunzel: Episode 5 - Princesses vs Witches'
+ ],
+
+['aliserapunzel6.mp4', 
+   [
+[5,596]
+], 'Alisebaba Rapunzel: Episode 6 - Disappearing Colors'
+ ],
+
+['aliserapunzel7.mp4', 
+   [
+[5,652]
+], 'Alisebaba Rapunzel: Episode 7 - Saving Silly Dwarf'
+ ],
+
+['aliserapunzel8.mp4', 
+   [
+[5,726]
+], 'Alisebaba Rapunzel: Episode 8 - Snow White\'s Birthday Party'
+ ],
+
+['aliserapunzel10.mp4', 
+   [
+[5,533]
+], 'Alisebaba Rapunzel: Episode 10 - Three Great Favors'
+ ],
+
+['aliserapunzel11.mp4', 
+   [
+[5,520]
+], 'Alisebaba Rapunzel: Episode 11 - The Giant Surprise Egg'
+ ],
+
+ 
  ['mermaid2.mp3', 
    [
 [1,739]
