--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@ var sentences=
      ], 'Pinocchio'
  ],
 
+['jackandthebeanstalk.mp3', 
+   [
+    [6,4532]
+   ], 'Jack and the Bean Stalk'
+ ],
+   
 ['aliserapunzel2.mp4', 
    [
  [5,519]
