--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@ var sentences=
     [6,4532]
    ], 'Jack and the Bean Stalk'
  ],
+['thirstyfrogtiddalik.mp4', 
+   [
+ [1,653]
+], 'Thirsty Frog Tiddalik'
+ ],
    
 ['aliserapunzel2.mp4', 
    [
