--- a/index.html
+++ b/index.html
@@ -4,7 +4,71 @@
 <script>
 var sentences= 
 [
-['pinocchio.mp3', 
+
+   
+['monsteracademy1.mp4', 
+   [
+[6,440]
+], 'Monster Academy: Chapper 1 - The First Day'
+ ],
+
+['monsteracademy2.mp4', 
+   [
+[5,462]
+], 'Monster Academy: Chapper 2 - Mrs Hag'
+ ],
+
+['monsteracademy3.mp4', 
+   [
+[6,403]
+], 'Monster Academy: Chapper 3 - One Mean Monster'
+ ],
+
+['monsteracademy4.mp4', 
+   [
+[5,452]
+], 'Monster Academy: Chapper 4 - Waldo\'s Weird Spells'
+ ],
+
+['monsteracademy5.mp4', 
+   [
+[6,391]
+], 'Monster Academy: Chapper 5 - A Ghostly Night'
+ ],
+
+['monsteracademy6.mp4', 
+   [
+[5,367]
+], 'Monster Academy: Chapper 6 - Over the Fence'
+ ],
+
+
+['monsteracademy7.mp4', 
+   [
+[5,397]
+], 'Monster Academy: Chapper 7 - Big Trouble'
+ ],
+
+['monsteracademy8.mp4', 
+   [
+[5,382]
+], 'Monster Academy: Chapper 8 - Mayor Hubbletree'
+ ],
+
+['monsteracademy9.mp4', 
+   [
+[6,421]
+], 'Monster Academy: Chapper 9 - Back to People Place'
+ ],
+
+['monsteracademy10.mp4', 
+   [
+[5,422]
+], 'Monster Academy: Chapper 10 - The Mistery is Solved'
+ ],
+   
+   
+   ['pinocchio.mp3', 
    [
        [5,4249]
      ], 'Pinocchio'
