--- a/index.html
+++ b/index.html
@@ -430,6 +430,13 @@ var sentences=
 ], 'Alice\'s Adventure in Wonderland - Chapter 3: The Pool of Tears'
  ],
 
+ 
+['alice4and5.mp3', 
+   [
+[5,624]
+], 'Alice\'s Adventure in Wonderland - Chapter 4: Another Swimmer and Chapter 5: A Race to Get Dry'
+ ],
+ 
  ['snowwhite1.mp4', 
    [
 [6,202]
