--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
 var sentences= 
 [
 
+ ['spacepatrol1.mp4', 
+   [
+[6,200]
+], 'Space Patrol: Episode 1 - The First Day'
+ ],
+
+['spacepatrol2.mp4', 
+   [
+[6,161]
+], 'Space Patrol: Episode 2 - A Big Mistake'
+ ],
+
+
+['spacepatrol3.mp4', 
+   [
+[6,163]
+], 'Space Patrol: Episode 3 - Rusty Robot'
+ ],
+
+['spacepatrol4.mp4', 
+   [
+[6,220]
+], 'Space Patrol: Episode 4 - Fixing Bot'
+ ],
+
+['spacepatrol5.mp4', 
+   [
+[6,210]
+], 'Space Patrol: Episode 5 - Surprise Landing'
+ ],
+
+['spacepatrol6.mp4', 
+   [
+[6,187]
+], 'Space Patrol: Episode 6 - Mission Over'
+ ],
+
  ['thelightprincess.mp3', 
    [
 [5,3806]
