--- a/index.html
+++ b/index.html
@@ -4,6 +4,108 @@
 <script>
 var sentences= 
 [
+
+   
+['thelittlemermaid1.mp4', 
+   [
+[6,276]
+], 'The Little Mermaid 1: The Sea Kingdom'
+ ],
+
+['thelittlemermaid2.mp4', 
+   [
+[6,304]
+], 'The Little Mermaid 2: The Youngest Sea Princess'
+ ],
+
+['thelittlemermaid3.mp4', 
+   [
+[6,267]
+], 'The Little Mermaid 3: Tail from the Upper World'
+ ],
+
+['thelittlemermaid4.mp4', 
+   [
+[6,300]
+], 'The Little Mermaid 4: The Little Mermaid Surfaces'
+ ],
+
+['thelittlemermaid5.mp4', 
+   [
+[6,279]
+], 'The Little Mermaid 5: The Storm'
+ ],
+
+['thelittlemermaid6.mp4', 
+   [
+[6,276]
+], 'The Little Mermaid 6: Daybreak'
+ ],
+
+
+['thelittlemermaid7.mp4', 
+   [
+[6,266]
+], 'The Little Mermaid 7: Watching from afar'
+ ],
+
+
+['thelittlemermaid8.mp4', 
+   [
+[6,291]
+], 'The Little Mermaid 8: Dreaming of the Upper World'
+ ],
+
+
+['thelittlemermaid9.mp4', 
+   [
+[6,287]
+], 'The Little Mermaid 9: The Journey to Gooba'
+ ],
+
+['thelittlemermaid10.mp4', 
+   [
+[6,298]
+], 'The Little Mermaid 10: The Sea Witch'
+ ],
+
+['thelittlemermaid11.mp4', 
+   [
+[6,273]
+], 'The Little Mermaid 11: Inside the Prince Palace'
+ ],
+
+['thelittlemermaid12.mp4', 
+   [
+[6,267]
+], 'The Little Mermaid 12: The Mermaid and the Prince'
+ ],
+
+['thelittlemermaid13.mp4', 
+   [
+[6,268]
+], 'The Little Mermaid 13: The Voyage'
+ ],
+
+['thelittlemermaid14.mp4', 
+   [
+[6,263]
+], 'The Little Mermaid 14: A Royal Wedding'
+ ],
+
+['thelittlemermaid15.mp4', 
+   [
+[6,271]
+], 'The Little Mermaid 15: A Last Chance'
+ ],
+
+['thelittlemermaid16.mp4', 
+   [
+[6,260]
+], 'The Little Mermaid 16: In the World of Air Spirits'
+ ],
+
+
 ['alittleprincess.mp3', 
    [
 [3,1144]
