--- a/index.html
+++ b/index.html
@@ -105,6 +105,37 @@ var sentences=
 ], 'The Little Mermaid 16: In the World of Air Spirits'
  ],
 
+   ['alice1.mp4', 
+   [
+[8,304]
+], 'Alice\'s Adventure in Wonderland - Chapter 1: Down the Rabbit Hole'
+ ],
+
+['alice2.mp4', 
+   [
+[8,317]
+], 'Alice\'s Adventure in Wonderland - Chapter 2: A Strange Drink'
+ ],
+
+['alice3.mp4', 
+   [
+[8,294]
+], 'Alice\'s Adventure in Wonderland - Chapter 3: The Pool of Tears'
+ ],
+
+ 
+['alice4and5.mp4', 
+   [
+[5,624]
+], 'Alice\'s Adventure in Wonderland - Chapter 4: Another Swimmer and Chapter 5: A Race to Get Dry'
+ ],
+
+   ['alice6and7and8.mp4', 
+   [
+[6,938]
+], 'Alice\'s Adventure in Wonderland - Chapter 6-8'
+ ],
+   
 
 ['alittleprincess.mp3', 
    [
@@ -556,31 +587,7 @@ var sentences=
 ], 'Cinderella - Episode 12: Happily Ever After'
  ],
 
-['alice1.mp4', 
-   [
-[8,304]
-], 'Alice\'s Adventure in Wonderland - Chapter 1: Down the Rabbit Hole'
- ],
 
-['alice2.mp4', 
-   [
-[8,317]
-], 'Alice\'s Adventure in Wonderland - Chapter 2: A Strange Drink'
- ],
-
-['alice3.mp4', 
-   [
-[8,294]
-], 'Alice\'s Adventure in Wonderland - Chapter 3: The Pool of Tears'
- ],
-
- 
-['alice4and5.mp3', 
-   [
-[5,624]
-], 'Alice\'s Adventure in Wonderland - Chapter 4: Another Swimmer and Chapter 5: A Race to Get Dry'
- ],
- 
  ['snowwhite1.mp4', 
    [
 [6,202]
