--- a/van.html
+++ b/van.html
@@ -32,132 +32,161 @@ ch
 </td>
 <td>
 chó
+<img onclick="playSound('cho.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 kh
+<img onclick="playSound('kh.m4a')" />
 </td>
 <td>
 khò
+<img onclick="playSound('kho.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 g
+<img onclick="playSound('g.m4a')" />
 </td>
 <td>
 gò
+<img onclick="playSound('go.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 gh
+<img onclick="playSound('gh.m4a')" />
 </td>
 <td>
 ghế
+<img onclick="playSound('ghe.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 ng
+<img onclick="playSound('ng.m4a')" />
 </td>
 <td>
 ngủ
+<img onclick="playSound('ngu.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 ngh
+<img onclick="playSound('ngh.m4a')" />
 </td>
 <td>
 nghe
+<img onclick="playSound('nghe.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 t
+<img onclick="playSound('t.m4a')" />
 </td>
 <td>
 tớ
+<img onclick="playSound('to.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 th
+<img onclick="playSound('th.m4a')" />
 </td>
 <td>
 thờ
+<img onclick="playSound('tho.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 nh
+<img onclick="playSound('nh.m4a')" />
 </td>
 <td>
 nhờ
+<img onclick="playSound('nho.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 r
+<img onclick="playSound('r.m4a')" />
 </td>
 <td>
 rả
+<img onclick="playSound('ra.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 tr
+<img onclick="playSound('tr.m4a')" />
 </td>
 <td>
 trả
+<img onclick="playSound('tra.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 ia
+<img onclick="playSound('ia.m4a')" />
 </td>
 <td>
 chia
+<img onclick="playSound('chia.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 ua
+<img onclick="playSound('ua.m4a')" />
 </td>
 <td>
 chúa
+<img onclick="playSound('chua.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 ưa
+<img onclick="playSound('ua2.m4a')" />
 </td>
 <td>
 chừa
+<img onclick="playSound('chua2.m4a')" />
 </td>
 </tr>
 
 <tr>
 <td>
 p
+<img onclick="playSound('p.m4a')" />
 </td>
 <td>
 pí
+<img onclick="playSound('pi.m4a')" />
 </td>
 </tr>
 
