--- a/van.html
+++ b/van.html
@@ -208,72 +208,88 @@ pí
 <tr>
 <td>
 ph
+<img onclick="playSound('ph.m4a', this)" />
 </td>
 <td>
 phí
+<img onclick="playSound('phi.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 qu
+<img onclick="playSound('qu.m4a', this)" />
 </td>
 <td>
 quá
+<img onclick="playSound('qua.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 gi
+<img onclick="playSound('gi.m4a', this)" />
 </td>
 <td>
 già
+<img onclick="playSound('gia.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ao
+<img onclick="playSound('ao.m4a', this)" />
 </td>
 <td>
 bảo
+<img onclick="playSound('bao.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 eo
+<img onclick="playSound('eo.m4a', this)" />
 </td>
 <td>
 hẻo
+<img onclick="playSound('heo.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 au
+<img onclick="playSound('au.m4a', this)" />
 </td>
 <td>
 đau
+<img onclick="playSound('dau.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 êu
+<img onclick="playSound('eu.m4a', this)" />
 </td>
 <td>
 trêu
+<img onclick="playSound('treu.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 âu
+<img onclick="playSound('au2.m4a', this)" />
 </td>
 <td>
 xấu
+<img onclick="playSound('xau.m4a', this)" />
 </td>
 </tr>
 
@@ -281,45 +297,55 @@ xấu
 <tr>
 <td>
 iu
+<img onclick="playSound('iu.m4a', this)" />
 </td>
 <td>
 líu
+<img onclick="playSound('liu.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ưu
+<img onclick="playSound('uu.m4a', this)" />
 </td>
 <td>
 lưu
+<img onclick="playSound('luu.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ai
+<img onclick="playSound('ai.m4a', this)" />
 </td>
 <td>
 tai
+<img onclick="playSound('tai.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oi
+<img onclick="playSound('oi.m4a', this)" />
 </td>
 <td>
 toi
+<img onclick="playSound('toi.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ôi
+<img onclick="playSound('oi2.m4a', this)" />
 </td>
 <td>
 tối
+<img onclick="playSound('toi2.m4a', this)" />
 </td>
 </tr>
 
@@ -327,225 +353,275 @@ tối
 <tr>
 <td>
 ơi
+<img onclick="playSound('oi3.m4a', this)" />
 </td>
 <td>
 hời
+<img onclick="playSound('hoi.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ui
+<img onclick="playSound('ui.m4a', this)" />
 </td>
 <td>
 lùi
+<img onclick="playSound('lui.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ưi
+<img onclick="playSound('ui2.m4a', this)" />
 </td>
 <td>
 chửi
+<img onclick="playSound('chui.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ay
+<img onclick="playSound('ay.m4a', this)" />
 </td>
 <td>
 hãy
+<img onclick="playSound('hay.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ây
+<img onclick="playSound('ay2.m4a', this)" />
 </td>
 <td>
 mấy
+<img onclick="playSound('may.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ac
+<img onclick="playSound('ac.m4a', this)" />
 </td>
 <td>
 lạc
+<img onclick="playSound('lac.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 âc
+<img onclick="playSound('ac2.m4a', this)" />
 </td>
 <td>
 gấc
+<img onclick="playSound('gac.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ăc
+<img onclick="playSound('ac3.m4a', this)" />
 </td>
 <td>
 mắc
+<img onclick="playSound('mac.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oc
+<img onclick="playSound('oc.m4a', this)" />
 </td>
 <td>
 sóc
+<img onclick="playSound('soc.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ôc
+<img onclick="playSound('oc2.m4a', this)" />
 </td>
 <td>
 hốc
+<img onclick="playSound('hoc.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uc
+<img onclick="playSound('uc.m4a', this)" />
 </td>
 <td>
 trúc
+<img onclick="playSound('truc.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ưc
+<img onclick="playSound('uc2.m4a', this)" />
 </td>
 <td>
 mực
+<img onclick="playSound('muc.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 at
+<img onclick="playSound('at.m4a', this)" />
 </td>
 <td>
 hát
+<img onclick="playSound('hat.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ăt
+<img onclick="playSound('at2.m4a', this)" />
 </td>
 <td>
 cắt
+<img onclick="playSound('cat.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ât
+<img onclick="playSound('at3.m4a', this)" />
 </td>
 <td>
 bật
+<img onclick="playSound('bat.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 et
+<img onclick="playSound('et.m4a', this)" />
 </td>
 <td>
 hét
+<img onclick="playSound('het.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 êt
+<img onclick="playSound('et2.m4a', this)" />
 </td>
 <td>
 tết
+<img onclick="playSound('tet.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 it
+<img onclick="playSound('it.m4a', this)" />
 </td>
 <td>
 mít
+<img onclick="playSound('mit.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ot
+<img onclick="playSound('ot.m4a', this)" />
 </td>
 <td>
 hót
+<img onclick="playSound('hot.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ôt
+<img onclick="playSound('ot2.m4a', this)" />
 </td>
 <td>
 hốt
+<img onclick="playSound('hot2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ơt
+<img onclick="playSound('ot3.m4a', this)" />
 </td>
 <td>
 hớt
+<img onclick="playSound('hot3.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ut
+<img onclick="playSound('ut.m4a', this)" />
 </td>
 <td>
 mút
+<img onclick="playSound('mut.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ưt
+<img onclick="playSound('ut2.m4a', this)" />
 </td>
 <td>
 mứt
+<img onclick="playSound('mut2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 an
+<img onclick="playSound('an.m4a', this)" />
 </td>
 <td>
 bạn
+<img onclick="playSound('ban.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ăn
+<img onclick="playSound('an2.m4a', this)" />
 </td>
 <td>
 trăn
+<img onclick="playSound('tran.m4a', this)" />
 </td>
 </tr>
 
@@ -553,198 +629,231 @@ trăn
 <tr>
 <td>
 ân
+<img onclick="playSound('an3.m4a', this)" />
 </td>
 <td>
 chân
+<img onclick="playSound('chan.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 en
+<img onclick="playSound('en.m4a', this)" />
 </td>
 <td>
 đèn
+<img onclick="playSound('den.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ên
+<img onclick="playSound('en2.m4a', this)" />
 </td>
 <td>
 sên
+<img onclick="playSound('sen.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 in
+<img onclick="playSound('in.m4a', this)" />
 </td>
 <td>
 tín
+<img onclick="playSound('tin.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 on
+<img onclick="playSound('on.m4a', this)" />
 </td>
 <td>
 son
+<img onclick="playSound('son.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ôn
+<img onclick="playSound('on2.m4a', this)" />
 </td>
 <td>
 hôn
+<img onclick="playSound('hon.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ơn
+<img onclick="playSound('on3.m4a', this)" />
 </td>
 <td>
 hờn
+<img onclick="playSound('hon2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 un
+<img onclick="playSound('un.m4a', this)" />
 </td>
 <td>
 thun
+<img onclick="playSound('thun.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ang 
+<img onclick="playSound('ang.m4a', this)" />
 </td>
 <td>
 trang
+<img onclick="playSound('trang.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ăng 
+<img onclick="playSound('ang2.m4a', this)" />
 </td>
 <td>
 trăng
+<img onclick="playSound('trang2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 âng 
+<img onclick="playSound('ang3.m4a', this)" />
 </td>
 <td>
 vầng
-</td>
-</tr>
-
-<tr>
-<td>
-âng 
-</td>
-<td>
-vầng
+<img onclick="playSound('vang.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ong 
+<img onclick="playSound('ong.m4a', this)" />
 </td>
 <td>
 chóng
+<img onclick="playSound('chong.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ông 
+<img onclick="playSound('ong2.m4a', this)" />
 </td>
 <td>
 hồng
+<img onclick="playSound('hong.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ung 
+<img onclick="playSound('ung.m4a', this)" />
 </td>
 <td>
 khủng
+<img onclick="playSound('khung.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ưng 
+<img onclick="playSound('ung2.m4a', this)" />
 </td>
 <td>
 hưng
+<img onclick="playSound('hung.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ach 
+<img onclick="playSound('ach.m4a', this)" />
 </td>
 <td>
 sách
+<img onclick="playSound('sach.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 êch 
+<img onclick="playSound('ech.m4a', this)" />
 </td>
 <td>
 ếch 
+<img onclick="playSound('ech2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ich 
+<img onclick="playSound('ich.m4a', this)" />
 </td>
 <td>
-thích 
+thích
+<img onclick="playSound('thich.m4a', this)" /> 
 </td>
 </tr>
 
 <tr>
 <td>
 am 
+<img onclick="playSound('am.m4a', this)" />
 </td>
 <td>
 nam 
+<img onclick="playSound('nam.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ăm 
+<img onclick="playSound('am2.m4a', this)" />
 </td>
 <td>
 nắm 
+<img onclick="playSound('nam2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 âm 
+<img onclick="playSound('am3.m4a', this)" />
 </td>
 <td>
 nấm 
+<img onclick="playSound('nam3.m4a', this)" />
 </td>
 </tr>
 
@@ -753,216 +862,264 @@ nấm
 <tr>
 <td>
 em 
+<img onclick="playSound('em.m4a', this)" />
 </td>
 <td>
 kem 
+<img onclick="playSound('kem.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 êm 
+<img onclick="playSound('em2.m4a', this)" />
 </td>
 <td>
 thềm 
+<img onclick="playSound('them.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 om 
+<img onclick="playSound('om.m4a', this)" />
 </td>
 <td>
 đóm
+<img onclick="playSound('dom.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ôm 
+<img onclick="playSound('om2.m4a', this)" />
 </td>
 <td>
 tôm 
+<img onclick="playSound('tom.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ơm 
+<img onclick="playSound('om3.m4a', this)" />
 </td>
 <td>
 cơm 
+<img onclick="playSound('com.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 im 
+<img onclick="playSound('im.m4a', this)" />
 </td>
 <td>
 tìm 
+<img onclick="playSound('tim.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 um 
+<img onclick="playSound('um.m4a', this)" />
 </td>
 <td>
 chum
+<img onclick="playSound('chum.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ap 
+<img onclick="playSound('ap.m4a', this)" />
 </td>
 <td>
 tháp
+<img onclick="playSound('thap.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ăp 
+<img onclick="playSound('ap2.m4a', this)" />
 </td>
 <td>
 cặp
+<img onclick="playSound('cap.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 âp 
+<img onclick="playSound('ap3.m4a', this)" />
 </td>
 <td>
 mập
+<img onclick="playSound('map.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ep 
+<img onclick="playSound('ep.m4a', this)" />
 </td>
 <td>
 chép
+<img onclick="playSound('chep.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 êp 
+<img onclick="playSound('ep2.m4a', this)" />
 </td>
 <td>
 rệp
+<img onclick="playSound('rep.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 op 
+<img onclick="playSound('op.m4a', this)" />
 </td>
 <td>
 hóp
+<img onclick="playSound('hop.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ôp 
+<img onclick="playSound('op2.m4a', this)" />
 </td>
 <td>
 hộp
+<img onclick="playSound('hop2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ơp 
+<img onclick="playSound('op3.m4a', this)" />
 </td>
 <td>
 lớp
+<img onclick="playSound('lop.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ip 
+<img onclick="playSound('ip.m4a', this)" />
 </td>
 <td>
 nhịp
+<img onclick="playSound('nhip.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 up 
+<img onclick="playSound('up.m4a', this)" />
 </td>
 <td>
 giúp
+<img onclick="playSound('giup.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 anh 
+<img onclick="playSound('anh.m4a', this)" />
 </td>
 <td>
 bánh
+<img onclick="playSound('banh.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ênh 
+<img onclick="playSound('enh.m4a', this)" />
 </td>
 <td>
 bênh
+<img onclick="playSound('benh.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 inh 
+<img onclick="playSound('inh.m4a', this)" />
 </td>
 <td>
 sinh
+<img onclick="playSound('sinh.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ươu
+<img onclick="playSound('uou.m4a', this)" />
 </td>
 <td>
 hươu
+<img onclick="playSound('huou.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 iêu
+<img onclick="playSound('ieu.m4a', this)" />
 </td>
 <td>
 diều
+<img onclick="playSound('dieu.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 yêu
+<img onclick="playSound('yeu.m4a', this)" />
 </td>
 <td>
 yếu
+<img onclick="playSound('yeu2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uôi
+<img onclick="playSound('uoi.m4a', this)" />
 </td>
 <td>
 chuối
+<img onclick="playSound('chuoi.m4a', this)" />
 </td>
 </tr>
 
@@ -970,9 +1127,11 @@ chuối
 <tr>
 <td>
 ươi
+<img onclick="playSound('uoi2.m4a', this)" />
 </td>
 <td>
 cười
+<img onclick="playSound('cuoi.m4a', this)" />
 </td>
 </tr>
 
@@ -981,9 +1140,11 @@ cười
 <tr>
 <td>
 iêc
+<img onclick="playSound('iec.m4a', this)" />
 </td>
 <td>
 xiếc
+<img onclick="playSound('xiec.m4a', this)" />
 </td>
 </tr>
 
@@ -991,378 +1152,462 @@ xiếc
 <tr>
 <td>
 uôc
+<img onclick="playSound('uoc.m4a', this)" />
 </td>
 <td>
 thuốc
+<img onclick="playSound('thuoc.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ươc
+<img onclick="playSound('uoc2.m4a', this)" />
 </td>
 <td>
 thước
+<img onclick="playSound('thuoc2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 iêt
+<img onclick="playSound('iet.m4a', this)" />
 </td>
 <td>
 viết
+<img onclick="playSound('viet.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 yêt
+<img onclick="playSound('yet.m4a', this)" />
 </td>
 <td>
 yết
+<img onclick="playSound('yet2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uôt
+<img onclick="playSound('uot.m4a', this)" />
 </td>
 <td>
 chuột
+<img onclick="playSound('chuot.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ươt
+<img onclick="playSound('uot2.m4a', this)" />
 </td>
 <td>
 trượt
+<img onclick="playSound('truot.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 iên
+<img onclick="playSound('ien.m4a', this)" />
 </td>
 <td>
 biển
+<img onclick="playSound('bien.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 yên
+<img onclick="playSound('yen.m4a', this)" />
 </td>
 <td>
 yến
+<img onclick="playSound('yen2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uôn
+<img onclick="playSound('uon.m4a', this)" />
 </td>
 <td>
 chuồn
+<img onclick="playSound('chuon.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ươn
+<img onclick="playSound('uon2.m4a', this)" />
 </td>
 <td>
 vườn
+<img onclick="playSound('vuon.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 iêng
+<img onclick="playSound('ieng.m4a', this)" />
 </td>
 <td>
 riêng
+<img onclick="playSound('rieng.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 yêng
+<img onclick="playSound('yeng.m4a', this)" />
 </td>
 <td>
 yểng
+<img onclick="playSound('yeng2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uông
+<img onclick="playSound('uong.m4a', this)" />
 </td>
 <td>
 buông
+<img onclick="playSound('buong.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ương
+<img onclick="playSound('uong2.m4a', this)" />
 </td>
 <td>
 bướng
+<img onclick="playSound('buong2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 iêm
+<img onclick="playSound('iem.m4a', this)" />
 </td>
 <td>
 xiêm
+<img onclick="playSound('xiem.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 yêm
+<img onclick="playSound('yem.m4a', this)" />
 </td>
 <td>
 yếm
+<img onclick="playSound('yem2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uôm
+<img onclick="playSound('uom.m4a', this)" />
 </td>
 <td>
 buồm
+<img onclick="playSound('buom.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ươm
+<img onclick="playSound('uom2.m4a', this)" />
 </td>
 <td>
 bướm
+<img onclick="playSound('buom2.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 iêp
+<img onclick="playSound('iep.m4a', this)" />
 </td>
 <td>
 thiệp
+<img onclick="playSound('thiep.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 ươp
+<img onclick="playSound('uop.m4a', this)" />
 </td>
 <td>
 mướp
+<img onclick="playSound('muop.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oa
+<img onclick="playSound('oa.m4a', this)" />
 </td>
 <td>
 hoa
+<img onclick="playSound('hoa.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oe
+<img onclick="playSound('oe.m4a', this)" />
 </td>
 <td>
 xòe
+<img onclick="playSound('xoe.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uê
+<img onclick="playSound('ue.m4a', this)" />
 </td>
 <td>
 tuế
+<img onclick="playSound('tue.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uy
+<img onclick="playSound('uy.m4a', this)" />
 </td>
 <td>
 thủy
+<img onclick="playSound('thuy.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oai
+<img onclick="playSound('oai.m4a', this)" />
 </td>
 <td>
 xoài
+<img onclick="playSound('xoai.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oay
+<img onclick="playSound('oay.m4a', this)" />
 </td>
 <td>
 xoay
+<img onclick="playSound('xoay.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oac
+<img onclick="playSound('oac.m4a', this)" />
 </td>
 <td>
 hoác
+<img onclick="playSound('hoac.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oat
+<img onclick="playSound('oat.m4a', this)" />
 </td>
 <td>
 hoạt
+<img onclick="playSound('hoat.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oan
+<img onclick="playSound('oan.m4a', this)" />
 </td>
 <td>
 ngoan
+<img onclick="playSound('ngoan.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oang
+<img onclick="playSound('oang.m4a', this)" />
 </td>
 <td>
 choàng
+<img onclick="playSound('choang.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uân
+<img onclick="playSound('uan.m4a', this)" />
 </td>
 <td>
 huấn
+<img onclick="playSound('huan.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uyên
+<img onclick="playSound('uyen.m4a', this)" />
 </td>
 <td>
 thuyền
+<img onclick="playSound('thuyen.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uyt
+<img onclick="playSound('uyt.m4a', this)" />
 </td>
 <td>
 huýt
+<img onclick="playSound('huyt.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oăt
+<img onclick="playSound('oat2.m4a', this)" />
 </td>
 <td>
 ngoặt
+<img onclick="playSound('ngoat.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uât
+<img onclick="playSound('uat.m4a', this)" />
 </td>
 <td>
 xuất
+<img onclick="playSound('xuat.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uyêt
+<img onclick="playSound('uyet.m4a', this)" />
 </td>
 <td>
 tuyệt
+<img onclick="playSound('tuyet.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oanh
+<img onclick="playSound('oanh.m4a', this)" />
 </td>
 <td>
 doanh
+<img onclick="playSound('doanh.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uynh
+<img onclick="playSound('uynh.m4a', this)" />
 </td>
 <td>
 huynh
+<img onclick="playSound('huynh.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 uych
+<img onclick="playSound('uych.m4a', this)" />
 </td>
 <td>
 huỵch
+<img onclick="playSound('huych.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oăng
+<img onclick="playSound('oang.m4a', this)" />
 </td>
 <td>
 hoẵng
+<img onclick="playSound('hoang.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oam
+<img onclick="playSound('oam.m4a', this)" />
 </td>
 <td>
 ngoạm
+<img onclick="playSound('ngoam.m4a', this)" />
 </td>
 </tr>
 
 <tr>
 <td>
 oap
+<img onclick="playSound('oap.m4a', this)" />
 </td>
 <td>
 oạp
+<img onclick="playSound('oap2.m4a', this)" />
 </td>
 </tr>
 
