--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@ var sentences=
 [3,205]
 ], 'Little Red Hen'
  ],   
+
+ ['hennypenny.mp4', 
+   [
+      [5,243]
+   ], 'Henny Penny'
+ ],  
    
 ['thelittlemermaid1.mp4', 
    [
