--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ var sentences=
       [5,243]
    ], 'Henny Penny'
  ],  
+
+['thethreelittlepigs.mp4', 
+   [
+      [5,396]
+   ], 'The Three Little Pigs'
+ ],
    
 ['thelittlemermaid1.mp4', 
    [
