--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ var sentences=
       [6,299],
    ], 'The Country Mouse and the City Mouse'
  ],
+['littleredridinghood.mp4', 
+   [
+     [3,394],
+   ], 'Little Red Riding Hood'
+ ],
    
 ['littleredhen.mp4', 
    [
