--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@ var sentences=
  [0,253]
 ], 'Wild Cat and the Princess Mouse'
  ],
+
+ ['threebillygoatsgruff.mp3', 
+   [
+    [0,539],
+   ], 'Three Billy Goats Gruff'
+ ],
+ 
  
 ['thelittlemermaid1.mp4', 
    [
