--- a/van2.html
+++ b/van2.html
@@ -443,7 +443,13 @@ function playVideo(myUrl, startTime, endTime) {
   video.play();
   maxTime = endTime;
 } 
+function pauseVideo(){
+  video.pause();
+}
 
+function unpauseVideo(){
+  video.play();
+}
 
 function readWord(wordId){
   time_index=wordId-1;
@@ -608,6 +614,11 @@ function unhideVideo() {
 <td>
 <a href="#" onclick="playAllVideos()" style="font-size: 20px; text-decoration: none" > Play All Videos</a>
 </td>
+  
+<td>
+<a href="#" onclick="pauseVideo()" style="font-size: 20px; text-decoration: none" > Pause Video</a>
+</td>
+  
 <td>
 <a href="#" onclick="pauseOrNot=true" style="font-size: 20px; text-decoration: none" > Pause = True </a>
 </td>
@@ -625,7 +636,9 @@ function unhideVideo() {
 </tr>
 <tr>
 
-
+<td>
+<a href="#" onclick="unpauseVideo()" style="font-size: 20px; text-decoration: none" > Unpause Video</a>
+</td>
 <td>
 <a href="#" onclick="updateRepeatTimes(1)" style="font-size: 20px; text-decoration: none" > Repeat Once </a>
 </td>
