--- a/van2.html
+++ b/van2.html
@@ -605,8 +605,18 @@ function unhideVideo() {
 
 <table id="wordTable" style="font-size:30px">
 </table>
+<br>
 
-
+<table>
+<tr>
+<td>
+<a href="#" onclick="pauseVideo()" style="font-size: 20px; text-decoration: none" > Pause Video</a>
+</td>
+<td>
+<a href="#" onclick="unpauseVideo()" style="font-size: 20px; text-decoration: none" > Unpause Video</a>
+</td>
+</tr>
+</table>
 <br>
 
 <table border=2>
@@ -614,11 +624,6 @@ function unhideVideo() {
 <td>
 <a href="#" onclick="playAllVideos()" style="font-size: 20px; text-decoration: none" > Play All Videos</a>
 </td>
-  
-<td>
-<a href="#" onclick="pauseVideo()" style="font-size: 20px; text-decoration: none" > Pause Video</a>
-</td>
-  
 <td>
 <a href="#" onclick="pauseOrNot=true" style="font-size: 20px; text-decoration: none" > Pause = True </a>
 </td>
@@ -635,10 +640,6 @@ function unhideVideo() {
 
 </tr>
 <tr>
-
-<td>
-<a href="#" onclick="unpauseVideo()" style="font-size: 20px; text-decoration: none" > Unpause Video</a>
-</td>
 <td>
 <a href="#" onclick="updateRepeatTimes(1)" style="font-size: 20px; text-decoration: none" > Repeat Once </a>
 </td>
