--- a/van2.html
+++ b/van2.html
@@ -402,6 +402,42 @@ var sentences=
 ]
 
 
+ ],
+['van.mp3', 
+   [
+      [91,95],
+[33,37],
+[91,95],
+[33,37],
+[890,890],
+[159,163],
+[196,200],
+[890,890],
+[24,29],
+[230,233],
+[187,192],
+[159,163],
+[95,99],
+[75,79],
+[890,890]
+   ], 'Truyen',
+    [
+       'Ngày',
+'xửa',
+'ngày',
+'xưa,',
+'có',
+'một',
+'con',
+'cú',
+'già',
+'sống',
+'trên',
+'một',
+'cây',
+'sồi',
+'to.'
+     ]
  ]
 ];
 
