--- a/van2.html
+++ b/van2.html
@@ -409,18 +409,40 @@ var sentences=
 [33,37],
 [91,95],
 [33,37],
-[890,890],
+[890,891],
 [159,163],
 [196,200],
-[890,890],
+[890,891],
 [24,29],
 [230,233],
 [187,192],
 [159,163],
 [95,99],
 [75,79],
-[890,890]
-   ], 'Truyen',
+[890,891],
+
+[75,79],
+[91,95],
+[890,891],
+[49,53],
+[223,228],
+[258,262],
+[131,134],
+[890,891],
+[134,138],
+[890,891],
+[890,891],
+[173,177],
+[127,131],
+[236,240],
+[341,345],
+[91,95],
+[890,891],
+[233,236],
+[326,330],
+[333,337]
+
+   ], 'Con cú khôn ngoan',
     [
        'Ngày',
 'xửa',
@@ -436,8 +458,32 @@ var sentences=
 'một',
 'cây',
 'sồi',
-'to.'
+'to.',
+
+
+'Mỗi',
+'ngày,',
+'nó',
+'đều',
+'phóng',
+'tầm',
+'mắt',
+'ra',
+'thật',
+'xa',
+'để',
+'quan',
+'sát',
+'những',
+'điều',
+'xảy',
+'ra',
+'xung',
+'quanh',
+'mình.'
+
      ]
+
  ]
 ];
 
